--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -14,7 +14,7 @@
         android:layout_height="100dp"
         android:layout_marginStart="16dp"
         android:contentDescription="@string/car1"
-        android:src="@drawable/ic_launcher_foreground"
+        android:src="@drawable/car1"
         app:layout_constraintBottom_toTopOf="@+id/car2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
@@ -24,7 +24,7 @@
         android:id="@+id/car2"
         android:layout_width="100dp"
         android:layout_height="100dp"
-        android:src="@drawable/ic_launcher_foreground"
+        android:src="@drawable/car2"
         android:contentDescription="@string/car2"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -39,6 +39,7 @@
         android:text="@string/go1"
         android:textSize="18sp"
         android:backgroundTint="#FF5555"
+        android:onClick="onClickMove1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnStart"
@@ -52,6 +53,7 @@
         android:text="@string/startt"
         android:textSize="18sp"
         android:backgroundTint="#00AA00"
+        android:onClick="onClickStart"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnMove1"
         app:layout_constraintEnd_toStartOf="@+id/btnMove2"
@@ -65,6 +67,7 @@
         android:text="@string/go2"
         android:textSize="18sp"
         android:backgroundTint="#FF55AA"
+        android:onClick="onClickMove2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnStart"
