--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -31,7 +31,20 @@
         app:layout_constraintTop_toBottomOf="@+id/car1"
         android:layout_marginStart="16dp" />
 
-    <!-- Кнопка ЕХАТЬ для первой машины (слева) -->
+
+
+    <Button
+        android:id="@+id/btnMode"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:backgroundTint="#FFA500"
+        android:onClick="onClickMode"
+        android:text="@string/_2"
+        android:textSize="14sp"
+        tools:layout_editor_absoluteX="308dp"
+        tools:layout_editor_absoluteY="0dp"
+        tools:ignore="MissingConstraints" />
+
     <Button
         android:id="@+id/btnMove1"
         android:layout_width="wrap_content"
@@ -44,6 +57,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/btnStart"
         android:layout_marginBottom="16dp" />
+
 
     <!-- Кнопка СТАРТ (по центру) -->
     <Button
@@ -68,6 +82,7 @@
         android:textSize="18sp"
         android:backgroundTint="#FF55AA"
         android:onClick="onClickMove2"
+        android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toEndOf="@+id/btnStart"
